# Scrapingtask_task_7

./: .gitignore  DEVELOPMENT_GUIDELINES.md  README.md  pyproject.toml
src/scraping/: main.py
src/scraping/output/: huggingface_models.json  quotes.json  staticwebscrape.json
src/scraping/scrapers/: features.py  scraper.py
